--- a/scss/header.scss
+++ b/scss/header.scss
@@ -1,3 +1,7 @@
+@import "nav.css";
+@import "section.css";
+
+
 .header {
     position: fixed;
     top: 0;
@@ -54,6 +58,8 @@
 .header__form {
     display:flex;
     max-width: 100%;
+    margin-right: 25px;
+    margin-left: 10px;
     .header__input--text {
         width: calc(100% - 60px);
         padding:0 6px;
@@ -126,5 +132,8 @@
     }
     .header__end .header__search {
         display:block;
+    }
+    .header__input--voice {
+        display:none;
     }
 }
